fix firefox alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,7 +216,7 @@ body > footer p {
   font-size: 14px;
 }
 .dsq-post-fields input {
-  width: 90%;
+  width: 100%;
 }
 .dsq-subscribe-menu input {
   width: auto;
